apps/telemetry-server/telemetry-server-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemetry-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: telemetry-server
  template:
    metadata:
      labels:
        app: telemetry-server
    spec:
      imagePullSecrets:
        - name: registry-pull-secret
      containers:
        - name: telemetry-server
          image: szbence/telemetryserver:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-override
              mountPath: /etc/application.properties
              subPath: application.properties
            - name: config-override
              mountPath: /opt/ls/NEZZUKK/pub-key.pem
              subPath: pub-key.pem
      volumes:
        - name: config-override-volume
          configMap:
            name: telemetry-server-app-config
            items:
              - key: application.properties
                path: application.properties
              - key: pub-key.pem
                path: pub-key.pem
