apps/telemetry-server/telemetry-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telemetry-server-service
spec:
  selector:
    app: telemetry-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8200
  type: LoadBalancer
