apps/telemetry-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: telemetry-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#    cert-manager.io/cluster-issuer: letsencrypt-production
#    service.beta.kubernetes.io/linode-loadbalancer-nodebalancer-id: "548228"
#    service.beta.kubernetes.io/linode-loadbalancer-preserve: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: tms.telemet.works
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: telemetry-server-service
                port:
                  name: http
#  tls:
#    - hosts:
#        - kubernetes.telemet.works
#      secretName: letsencrypt-production
