apps/telemetry-server/tes-group-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: telemetry-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    service.beta.kubernetes.io/linode-loadbalancer-nodebalancer-id: "548228"
#    service.beta.kubernetes.io/linode-loadbalancer-preserve: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: tms.telemet.works
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: telemetry-server-service
                port:
                  name: http
